# InfoLens

./: .gitignore  README-EN.md  README.md  pyproject.toml
docs/: phase1-summary.md
web/backend/: pyproject.toml
web/backend/app/: deps.py  main.py
web/backend/app/models/: analytics.py  common.py  config.py  news.py  rss.py  scheduler.py  search.py
web/backend/app/routers/: analytics.py  config.py  news.py  notification.py  rss.py  search.py  system.py  tasks.py
web/backend/app/tasks/: manager.py  worker.py
web/backend/app/ws/: handlers.py  manager.py
web/frontend/: package-lock.json  package.json
web/frontend/src/app/: layout.tsx  page.tsx
web/frontend/src/app/analytics/: page.tsx
web/frontend/src/app/config/: page.tsx
web/frontend/src/app/news/: page.tsx
web/frontend/src/app/notifications/: page.tsx
web/frontend/src/app/rss/: page.tsx
web/frontend/src/app/scheduler/: page.tsx
web/frontend/src/app/search/: page.tsx
web/frontend/src/lib/: api.ts  types.ts  ws.ts
